<resources>
    <string name="app_name">ColorFun</string>
    <string name="simon_color">Simon Color</string>
    <string name="text_color">Text/Color</string>
    <string name="settings">Settings</string>
    <string name="colorfun">ColorFun</string>
    <string name="main_menu">Main menu</string>
    <string name="_0">0</string>
    <string name="sound">Sound</string>
    <string name="darkmode">DarkMode</string>
    <string name="username" translatable="false">Username</string>
    <string name="change_user_name">Change username</string>
    <string name="start">Start</string>
    <string name="easy">Easy</string>
    <string name="hard">Hard</string>
    <string name="final_score">Final score</string>
    <string name="score">Score</string>
    <string name="username_placeholder">**********</string>
    <string name="click">Click on the image to change it</string>
    <string name="time">Time</string>
    <string name="mode">Color/Text</string>
    <string name="text">Text</string>
    <string name="online_score">Online Score</string>
    <string name="local_score">Local Score</string>
    <string name="simon_color_rules">\t Game starts by randomly choosing one color button and displaying sequence. Player have to repeat this sequence by pressing the chosen button.\n\n\t Next round another color button will be added to this sequence and so on.\n\n\t Player must input the correct button sequence each round.\n\n\t Game ends when the player makes mistake.</string>
    <string name="rules">Rules</string>
    <string name="text_color_rules">Every round a player will be given command on what button to press. Command consists of 2 things:\n1. Text/Color – text means, that player is looking for a text inside of a button.\n                         – color means, that players is looking for a color of a button.\n2. Color- it represents color of the text or button that was chosen. \n\nPlayer must find and press correct button before time runs out.\n\nGame ends when player chooses wrong button, or his time runs out.</string>
    <string name="difficulty">Difficulty</string>
    <string name="game">Game</string>
    <string name="type_here">Type here…</string>
</resources>