<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/gameRecordLayout"
    android:layout_width="match_parent"
    android:layout_height="135dp"
    tools:context=".fragment.ScoreFragment"
    android:background="@drawable/score">

    <ImageView
        android:id="@+id/ivProfilePicture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tvUsername"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="10dp"
        android:autoSizeTextType="uniform"
        android:gravity="left"
        android:text="@string/username"
        app:layout_constraintStart_toEndOf="@+id/ivProfilePicture"
        app:layout_constraintTop_toTopOf="@+id/ivProfilePicture" />

    <TextView
        android:id="@+id/tvGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:autoSizeTextType="uniform"
        android:gravity="center"
        android:text="@string/game"
        app:layout_constraintStart_toStartOf="@+id/tvUsername"
        app:layout_constraintTop_toBottomOf="@+id/tvUsername" />

    <TextView
        android:id="@+id/tvGameDifficulty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:autoSizeTextType="uniform"
        android:gravity="center"
        android:text="@string/difficulty"
        app:layout_constraintBottom_toBottomOf="@+id/tvGame"
        app:layout_constraintStart_toEndOf="@+id/tvGame" />

    <TextView
        android:id="@+id/tvScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:autoSizeTextType="uniform"
        android:gravity="center"
        android:text="@string/score"
        app:layout_constraintBottom_toBottomOf="@+id/tvGameDifficulty"
        app:layout_constraintStart_toEndOf="@+id/tvGameDifficulty" />

</androidx.constraintlayout.widget.ConstraintLayout>