<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/gameOverLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.GameOverFragment"
    android:background="@drawable/main_menu">

    <TextView
        android:id="@+id/tvScore_title"
        android:layout_width="370dp"
        android:layout_height="98dp"
        android:layout_marginTop="200dp"
        android:autoSizeTextType="uniform"
        android:gravity="center"
        android:text="@string/final_score"
        android:textColor="#3E2723"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvScore"
        android:layout_width="162dp"
        android:layout_height="275dp"
        android:layout_marginTop="20dp"
        android:autoSizeTextType="uniform"
        android:gravity="center"
        android:text="@string/_0"
        android:textColor="#3E2723"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvScore_title" />

    <Button
        android:id="@+id/btnBackToMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_green"
        android:text="@string/main_menu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvScore" />
</androidx.constraintlayout.widget.ConstraintLayout>