<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settingsLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.SettingsFragment">

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/swSound"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:checked="true"
        android:text="@string/sound"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.463"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/swDarkMode"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:text="@string/darkmode"
        android:checked="true"
        app:layout_constraintStart_toStartOf="@+id/swSound"
        app:layout_constraintTop_toBottomOf="@+id/swSound"/>

    <TextView
        android:id="@+id/tvMenoNadpis"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="60dp"
        android:autoSizeTextType="uniform"
        android:gravity="center"
        android:text="@string/username"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivProfilePicture"
        android:layout_width="170dp"
        android:layout_height="170dp"
        android:layout_marginTop="48dp"
        android:clickable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.652"
        app:layout_constraintStart_toEndOf="@+id/tvMenoNadpis"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/kevin"
        android:focusable="true" />

    <TextView
        android:id="@+id/tvUsername"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="20dp"
        android:autoSizeTextType="uniform"
        android:gravity="center"
        android:text="@string/michael_scott"
        app:layout_constraintEnd_toEndOf="@+id/tvMenoNadpis"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvMenoNadpis" />

    <Button
        android:id="@+id/btnChangeUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_user_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/swDarkMode" />

    <EditText
        android:id="@+id/etUserName"
        android:layout_width="206dp"
        android:layout_height="76dp"
        android:ems="10"
        android:gravity="center"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/btnChangeUserName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/swDarkMode" />
</androidx.constraintlayout.widget.ConstraintLayout>