<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/blue2">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_marginBottom="20dp"
        android:autoSizeTextType="uniform"
        android:gravity="center"
        android:text="@string/rules"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tvRules"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/ivEasy"
        android:layout_width="200dp"
        android:layout_height="350dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/text_color_easy" />

    <ImageView
        android:id="@+id/ivHard"
        android:layout_width="200dp"
        android:layout_height="350dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/ivEasy"
        app:layout_constraintTop_toTopOf="@+id/ivEasy"
        app:srcCompat="@drawable/text_color_hard" />

    <TextView
        android:id="@+id/tvRules"
        android:layout_width="350dp"
        android:layout_height="220dp"
        android:layout_marginTop="70dp"
        android:layout_marginBottom="10dp"
        android:autoSizeTextType="uniform"
        android:gravity="center"
        android:text="@string/text_color_rules"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.841" />

    <Button
        android:id="@+id/btnEasy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/btn_dark_blue"
        android:text="Easy"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivEasy" />

    <Button
        android:id="@+id/btnHard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:background="@drawable/btn_red"
        android:text="Hard"
        app:layout_constraintBottom_toBottomOf="@+id/btnEasy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnEasy" />

    <Button
        android:id="@+id/btnStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:background="@drawable/btn_green"
        android:text="Start"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/btnHard" />

    <Button
        android:id="@+id/btnBackToMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_green"
        android:text="@string/main_menu"
        app:layout_constraintBottom_toBottomOf="@+id/btnStart"
        app:layout_constraintEnd_toEndOf="@+id/btnEasy" />

</androidx.constraintlayout.widget.ConstraintLayout>